Tests/Should_succeed/5_Functions/06_MethodReturn.decaf
class Test {
	void m1(){
		WriteString("0=0");
		WriteString("\n");
		return;
		WriteString("1=0");
		WriteString("\n");
	}
	void main(){
		m1();
	}
}