Tests/Should_fail/5_Functions/05_ReturnValOnMethod.decaf
class Test {
	void m1(){
		WriteString("0=1");
		WriteString("\n");
	}
	void main(){
		int a;
		a = m1();
	}
}